AUTOMAKE_OPTIONS = foreign
# bin_PROGRAMS = helloworld
# helloworld_SOURCES = main.cc   

noinst_LIBRARIES  = libhelloworld.a
libhelloworld_a_SOURCES = helloworld.h helloworld.cc 
LDADD = libhelloworld.a


# Suppress any installation of SUBDIRS, which may be distributed separately
install-data:
	@:
install-dvi:
	@:
install-exec: all
	@:
install-html:
	@:
install-info:
	@:
install-pdf:
	@:
install-ps:
	@:
install: all
	@:
installcheck:
	@:
installdirs:
	@:
uninstall:
	@:
